--- a/KeySafe/KeySafe/UserControls/LoginView.resx
+++ b/KeySafe/KeySafe/UserControls/LoginView.resx
@@ -120,4 +120,7 @@
   <metadata name="openFileDialog_OpenKeySaveFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="saveFileDialog_CreateNew.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>249, 17</value>
+  </metadata>
 </root>
